# newwork

MultiFormatRAG/docs_to_knowledge_graph/: README.md  env.txt  main.py  pyproject.toml
MultiFormatRAG/fastapi_server_docker/: README.md  compose.yaml  dockerfile.txt  env.txt  main.py  requirements.txt
MultiFormatRAG/fastapi_server_docker/files/: 1810.04805v2.md
MultiFormatRAG/multi_format_indexing/: README.md  env.txt  main.py  pyproject.toml
