[project]
name = "pdf-embedding"
version = "0.1.0"
description = "Simple example for cocoindex: build embedding index based on local PDF files."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[colpali]>=0.2.8",
    "python-dotenv>=1.0.1",
    "pdf2image>=1.17.0",
    "qdrant-client>=1.15.0",
]

[tool.setuptools]
packages = []
